tests/ui-msrv/transmute-mut-src-immutable.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-src-immutable.rs:17:22
   |
17 |     let _: &mut u8 = transmute_mut!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut _`
                      found reference `&u8`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
